--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body{
     width: 40px;
     margin-right: 10px;
 }
-.humidity, .wind{
+.Humidity, .Wind{
     font-size: 28px;
     margin-top: 10px;
 }
